# VAVM

./: README.md
catkin_ws#VAVM-A/catkin_ws#VAVM-A/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws#VAVM-A/catkin_ws#VAVM-A/devel/: _setup_util.py  setup.sh
catkin_ws#VAVM-A/catkin_ws#VAVM-A/logs/gt_publisher/: build.make.000.log.stderr
catkin_ws#VAVM-A/catkin_ws#VAVM-A/logs/rotation_estimator/: build.make.000.log.stderr
catkin_ws#VAVM-A/catkin_ws#VAVM-A/src/VAVM-A/src/event_publisher/: CMakeLists.txt  package.xml
catkin_ws#VAVM-A/catkin_ws#VAVM-A/src/VAVM-A/src/event_publisher/config/: config.yaml
catkin_ws#VAVM-A/catkin_ws#VAVM-A/src/VAVM-A/src/gt_publisher/: package.xml
catkin_ws#VAVM-A/devel/: .catkin  local_setup.bash  local_setup.sh  setup.zsh
catkin_ws#VAVM-A/devel/.private/event_publisher/: .catkin
catkin_ws#VAVM-A/devel/.private/gt_publisher/: .catkin
catkin_ws#VAVM-A/devel/.private/rotation_estimator/: .catkin
catkin_ws#VAVM-A/devel/include/dvs_msgs/: Event.h  EventArray.h
catkin_ws#VAVM-A/devel/lib/pkgconfig/: gt_publisher.pc
catkin_ws#VAVM-A/devel/lib/rotation_estimator/: rotation_estimation
catkin_ws#VAVM-A/src/VAVM-A/src/gt_publisher/: CMakeLists.txt
catkin_ws#VAVM-B/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws#VAVM-B/catkin_ws#VAVM-B/devel/: .catkin  env.sh  setup.bash
catkin_ws#VAVM-B/catkin_ws#VAVM-B/logs/dvs_renderer/: build.make.000.log.stderr
catkin_ws#VAVM-B/catkin_ws#VAVM-B/logs/rotation_estimator/: build.cmake.000.log.stderr
catkin_ws#VAVM-B/devel/: local_setup.zsh
catkin_ws#VAVM-B/devel/.private/catkin_simple/: setup.sh
catkin_ws#VAVM-B/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
catkin_ws#VAVM-B/devel/.private/davis_ros_driver/: .rosinstall  local_setup.sh  setup.sh
catkin_ws#VAVM-B/devel/.private/dvs_msgs/: local_setup.sh
catkin_ws#VAVM-B/devel/.private/dvs_renderer/: .catkin  local_setup.sh
catkin_ws#VAVM-B/devel/.private/event_bundler/: setup.sh
catkin_ws#VAVM-B/devel/.private/event_publisher/: .catkin
catkin_ws#VAVM-B/devel/.private/gt_publisher/: .catkin  local_setup.sh
catkin_ws#VAVM-B/devel/.private/rotation_estimator/: .catkin
catkin_ws#VAVM-B/devel/include/davis_ros_driver/: DAVIS_ROS_DriverConfig.h
catkin_ws#VAVM-B/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  dvs_msgs.pc  dvs_renderer.pc  event_bundler.pc  rotation_estimator.pc
catkin_ws#VAVM-B/devel/lib/rotation_estimator/: rotation_estimator  rotation_estimator_node
catkin_ws#VAVM-B/logs/event_publisher/: build.make.000.log.stderr
catkin_ws#VAVM-B/logs/rotation_estimator/: build.make.001.log.stderr
(+124 files in other folders)
