<?xml version="1.0"?>
<package format="2">
  <name>event_publisher</name>
  <version>0.0.0</version>
  <description>The event_publisher package</description>

  <author email="18376088@buaa.edu.cn">wenzhuo li</author>
  <maintainer email="18376088@buaa.edu.cn">wenzhuo li</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/swtwtrzz/VAVM</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dvs_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>dvs_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <depend>eigen_conversions</depend>
  <depend>rosbag</depend>

</package>
