<?xml version="1.0"?>
<package format="2">
  <name>gt_publisher</name>
  <version>0.0.0</version>
  <description>The gt_publisher package</description>

  <author email="18376088@buaa.edu.cn">wenzhuo li</author>
  <maintainer email="18376088@buaa.edu.cn">wenzhuo li</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/swtwtrzz/VAVM</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>dvs_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>

</package>
